[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"
readme = 'README.md'
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.17.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
